--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,19 +1,9 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*"
-  ],
   "compilerOptions": {
-    "composite": true,
-    "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+    "allowJs": true,
+    "checkJs": true,
+    "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node", "unplugin-vue-router/client"]
+    "moduleResolution": "Bundler"
   }
 }
