--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,11 +1,9 @@
 {
-  "extends": "./tsconfig.app.json",
-  "exclude": [],
   "compilerOptions": {
-    "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
-    "lib": [],
-    "types": ["node", "jsdom"]
+    "allowJs": true,
+    "checkJs": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   }
 }
